# pep585-upgrade

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  get_version.py  notes  pyproject.toml  setup.cfg
.github/workflows/: codecov.yml  test.yml
src/: upgrade_type_hints.py
src/upgrade_type_hints/: __init__.py  checker.py  constants.py  definitions.py  main.py  update.py  upgrade_type_hints.py  utils.py
tests/: __init__.py  backup.py  test_find_annotations_in_file.py  test_flatten_list.py  test_get_type_annotations.py  test_map_imports.py  test_process_line.py  text_fix_file.py  typing_example.py
tests/example_files/: backup.py  classvar.py  expected_function_definition.py  expected_variable_definitions.py  function_definition.py  import_example.py  imports_template.py  variable_definitions.py  variable_definitions_template.py
tests/integration/: __init__.py  test_dont_corrupt_imports.py  test_dont_false_positives.py  test_format_function_defintion.py  test_format_variable_definitions.py  test_futures_import.py  test_futures_with_docstring.py  test_generator.py  test_plain_brackets.py  test_remove_space_top_of_file.py
tests/rewrite/: test_process_line.py  text_fix_file.py
tests/temp/: test_format_function.py
tests/unit/: test_find_annotations_in_file.py  test_flatten_list.py  test_get_docstring_ends.py  test_get_future_import_insert_position.py  test_get_type_annotations.py  test_map_imports.py  test_remove_imports.py  test_str_to_bool.py
